@@ -7,6 +7,6 @@ AUX dpsrc-maxobvvalue-20080225.patch 352 RMD160 fe8d89430ec5e63b644cd4b9e5161c40
 AUX dpsrc-patchset-20080225.patch 4587 RMD160 a582f14dbe92cb3802b641b737d726ed2d39d527 SHA1 3aa03d5d53135ca9ac1464f26a3eceae4a8a9d3a SHA256 4a1c7ca2418558a857bd7d55d0815c5caa6fbe911bd4bf320b8460aa917effbb
 DIST dplib.02_25_2008.tar.gz 5340447 RMD160 51b5892c83bb5d420f324e3dab5edec24925f728 SHA1 3a77ed5e1e49f377083a11b8a177f678284b91f2 SHA256 7f9a30ae8ab029e0eeca4fbe08e665b572ec98a05ec001a67f95e4857d2a5b05
 DIST dpsrc.02_25_2008.tar.gz 6399167 RMD160 ed14f8ceb225e86f25026916ab4934a140f602ae SHA1 f1023d99ec7d2a64611dabedfbc5ad6f16e67cf7 SHA256 794bedcc48cf444c5813f864f4bacb158474d450337279edaf7fba1055c552c6
-EBUILD dataplot-20080225-r1.ebuild 2632 RMD160 da6e3a8827e6fa119601b26fb35c5a4d6e1847d2 SHA1 4cac3a21e0f5dd7556e8b41d97ee8a701c2bfc6f SHA256 d95aa9573860af85854791b0668100b06dd6f4f3621baf10bd328a190b2be901
-MISC ChangeLog 2473 RMD160 2e0896e97e8616697776be6b6274a0282a09aa42 SHA1 d10091f18735d220a814645d8f022755fa00038a SHA256 ad5ce8dc57857fc5b244113c546832baab0c6a583d0465158931549230dcd701
+EBUILD dataplot-20080225-r1.ebuild 2407 RMD160 5a92840bf8c61ef3a6c208031f780441e509d59f SHA1 08e422782da1aacaafc4b1950082cade489ee610 SHA256 7a87538664ef101b8a0c70781a588af81f66168d43f668c42c185d96d71f4e39
+MISC ChangeLog 2709 RMD160 f9967c50050b0ff38f0ed60229f622e28331ccd4 SHA1 dc6f59168cb55b7732ddc240eab7c8057c083cfa SHA256 1dd49f73e1bb3fe43137cc921524c6ae1d95c7d3b9368f9179cd6b86569f9940
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
