@@ -2,7 +2,7 @@
 # Distributed under the terms of the GNU General Public License v2
 # $Header: $
 
-inherit eutils toolchain-funcs flag-o-matic autotools
+inherit eutils toolchain-funcs flag-o-matic autotools fortran
 
 #     DAY         MONTH    YEAR
 MY_PV=${PV:4:2}_${PV:6:2}_${PV:0:4}
@@ -40,12 +40,8 @@ pkg_setup() {
 			die
 		fi
 	fi
-	#We also need a Fortran 77 compiler
-	if ! built_with_use sys-devel/gcc fortran; then
-		eerror "sys-devel/gcc is not compiled with USE=\"fortran\" and ${PN}
-		needs a fortran compiler"
-		eerror "Please recompile sys-devel/gcc, ensuring USE=\"fortran\""
-	fi
+
+	need_fortran gfortran
 }
 
 src_unpack() {
